tests/pass/ShiftRightUnsignAssign.java
//package pass;
//
//public class ShiftRightUnsignAssign {
//    public int shiftRightUnsignAssign(int x, int y) {
//    	x >>>= y;
//        return x;;
//    }
//}
