tests/fail/ShiftRightUnsignAssign.java
package fail;

public class ShiftRightUnsignAssign {
	public static void main ( String [] args ) {
		System.out.println('a' >>>= 42);
	}
}
